<resources>
    <string name="app_name">Sudoku</string>
    <string name="option1">Odd and even</string>
    <string name="option2">Neighbours</string>
    <string name="option3">Trio</string>
    <string name="option4">Usual</string>
    <string name="start">Continue</string>
    <string name="level">Level</string>
    <string name="size">Size</string>
    <string name="play">Play</string>
    <string name="error1">You want to much from me</string>
    <string name="error2">But it\'s too easy…</string>
    <string name="error3">Do you think it\'s a number? </string>
    <string name="error4">Hmm… Strange time, I must say</string>
    <string name="continue_game">Previous game</string>
    <string name="nothing_chosen">Nothing chosen</string>
    <string name="already_filled">Already filled</string>
    <string name="win">WIN 😎</string>
    <string name="time">⏱ Time: </string>
    <string name="mistakes">❌ Mistakes: </string>
    <string name="hints">💡 Hints: </string>
    <string name="highlight1">Highlight row, column and square</string>
    <string name="highlight2">Highlight similar numbers</string>
    <string name="autocheck">Highlight mistakes</string>
    <string name="time_limit">Time limit</string>
    <string name="hints_limit">Hints limit</string>
    <string name="mistakes_limits">Mistakes limit</string>
    <string name="timer">Timer</string>
    <string name="hints_count">Display number of hints</string>
    <string name="mistakes_count">Display number of mistakes</string>
    <string name="inputmode">✏️ Input mode</string>
    <string name="autodelete">❎ Delete notes automatically</string>
    <string name="mode1">First cell</string>
    <string name="mode2">First number</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="max_mistakes">mistakes</string>
    <string name="max_hints">hints</string>
    <string name="settingslabel">Settings</string>
    <string name="toolittletime">Really?</string>
    <string name="gameover">Game over 🙁</string>
    <string name="becauseoftime">Time is up</string>
    <string name="becauseofmistakes">Too many mistakes</string>
    <string name="becauseofhints">Too many hints</string>
    <string name="becauseofsuccess">Well done</string>
    <string name="retry">Try again</string>
    <string name="save">Save</string>
    <string name="highlighting">⭐️ Highlighting</string>
    <string name="display">📱 Display</string>
    <string name="limits">⛔️ Limits</string>
    <string name="general_rule">Every two numbers in every row,\ncolumn or little square\nare different</string>
    <string name="neighbours">The absolute value of difference\nof two numbers in cells divided\nwith wide border equals 1</string>
    <string name="oddandeven">The background of cells with\neven number is gray</string>
    <string name="trio">There is a pink circle in the background\nof cells with number, which is less or\nequals 1\/3 of maximal number, yellow\nsquare for number which is more 1\/3 and\n less or equals 2\/3 of it</string>
    <string name="rules">Rules</string>
    <string name="general">General</string>
    <string name="charactersmode">Characters mode</string>
    <string name="cm1">Numbers and letters</string>
    <string name="cm2">Sky</string>
    <string name="cm3">Sweets</string>
    <string name="cm4">Computer</string>
    <string name="cm5">Math</string>
</resources>