<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highlighting"
                android:textAlignment="center"
                android:textSize="28sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highlight1"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highlight2"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autocheck"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display"
                android:textAlignment="center"
                android:textSize="28sp" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mistakes_count"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hints_count"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limits"
                android:textAlignment="center"
                android:textSize="28sp" />

            <Switch
                android:id="@+id/switch7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_limit"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextNumber3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
                    app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView10"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Switch
                android:id="@+id/switch8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mistakes_limits"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextNumber4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max_mistakes"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextNumber4"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Switch
                android:id="@+id/switch9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hints_limit"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextNumber5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/max_hints"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextNumber5"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inputmode"
                android:textAlignment="center"
                android:textSize="28sp" />

            <Switch
                android:id="@+id/switch10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode1"
                android:textSize="24sp" />

            <Switch
                android:id="@+id/switch11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textAlignment="center"
                android:textSize="28sp" />

            <Switch
                android:id="@+id/switch12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autodelete"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>